--- a/poster.tex
+++ b/poster.tex
@@ -95,7 +95,7 @@
 % Metadata
 \title{Classifier-based latency estimation for covert attention ERP decoding}
 \author{
-	Arne Van Den Kerchove\textsuperscript{*,1,2},
+	Arne Van Den Kerchove\textsuperscript{1,2},
 	Hakim Si-Mohammed\textsuperscript{1},
 	Marc Van Hulle\textsuperscript{2},
 	François Cabestaing\textsuperscript{1}
@@ -347,11 +347,10 @@
 
 		\subsection*{\color{black} Single trial classification performance}
 
-		\centering
-		\includegraphics[width=.975\linewidth]{figures/classification_results_iter.png}
+		{\centering
+			\includegraphics[width=.975\linewidth]{figures/classification_results_iter.png}
 
-		\includegraphics[width=\linewidth]{figures/classification_results_rel.eps}
-
+			\includegraphics[width=\linewidth]{figures/classification_results_rel.eps}}
 		While covert attention decoding performance is significantly improved, there is a significant decrease in overt attention performance. This is probably due to the high contribution of early visual ERP components in overt attention, which are destroyed by the alignment procedure. No significant effect is observed for split attention decoding. Future work will investigate a multi-component approach.
 	}
 
